--- a/feature-selection.ipynb
+++ b/feature-selection.ipynb
@@ -1941,6 +1941,83 @@
     "plt.legend(title='Stroke', labels=['No', 'Yes'])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 11 → How do age and BMI collectively influence the likelihood of experiencing a stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 12 → What is the relationship between age and BMI in the absence of stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 13 → How do age, hypertension, and smoking status collectively affect the probability of experiencing a stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 14 → What is the combined impact of age, hypertension, and smoking status on the absence of stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"greyblue\" size=+2.0><b>XAI Implementation - Research Questions (combination variables)</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 4 → What is the relationship between smoking status and the absence of stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 5 → Does average glucose level correlate with the probability of stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 11 → How do age and BMI collectively influence the likelihood of experiencing a stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 12 → What is the relationship between age and BMI in the absence of stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 13 → How do age, hypertension, and smoking status collectively affect the probability of experiencing a stroke?</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"bluegrey\" size=+1.0><b>Research Question 14 → What is the combined impact of age, hypertension, and smoking status on the absence of stroke?</b></font>"
+   ]
   }
  ],
  "metadata": {
