--- a/version_3.0/non-xai/data_preprocess.ipynb
+++ b/version_3.0/non-xai/data_preprocess.ipynb
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "file_path = 'healthcare-dataset-stroke-data.csv' \n",
+    "file_path = 'C:/Users/zen/Documents/-- four/s2/FYP I/XAl-on-healthcare-diagnostics/version_3.0/healthcare-dataset-stroke-data.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "print(data.info())\n",
@@ -167,6 +167,33 @@
     "processed_data_train['stroke'] = y_train.values\n",
     "processed_data_train.to_csv('processed_stroke_data_train.csv', index=False)\n",
     "print(\"Processed data saved to 'processed_stroke_data_train.csv'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed test data saved to 'processed_stroke_data_test.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "processed_features_test = pipeline.named_steps['preprocessor'].transformers_[1][1].get_feature_names_out(categorical_columns)\n",
+    "\n",
+    "all_features_test = list(numerical_columns) + list(processed_features_test)\n",
+    "\n",
+    "# Create df for the test data\n",
+    "processed_data_test = pd.DataFrame(X_test_processed, columns=all_features_test)\n",
+    "processed_data_test['stroke'] = y_test.values\n",
+    "\n",
+    "# Save the processed test data to a CSV file\n",
+    "processed_data_test.to_csv('processed_stroke_data_test.csv', index=False)\n",
+    "print(\"Processed test data saved to 'processed_stroke_data_test.csv'\")"
    ]
   }
  ],
