--- a/version_3.0/sci-xai/baseline_models.ipynb
+++ b/version_3.0/sci-xai/baseline_models.ipynb
@@ -58,7 +58,18 @@
       "3       1  \n",
       "4       1  \n",
       "Processed Training Data Shape: (4088, 18)\n",
-      "Processed Testing Data Shape: (1022, 18)\n"
+      "Processed Testing Data Shape: (1022, 18)\n",
+      "Original Class Distribution:\n",
+      "stroke\n",
+      "0    3901\n",
+      "1     187\n",
+      "Name: count, dtype: int64\n",
+      "Resampled Class Distribution:\n",
+      "stroke\n",
+      "1    3686\n",
+      "0    3259\n",
+      "Name: count, dtype: int64\n",
+      "Resampled Training Data Shape: (6945, 18)\n"
      ]
     }
    ],
@@ -69,7 +80,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from joblib import load\n",
-    "from data_preprocess import preprocess_data"
+    "from data_preprocess import preprocess_data\n",
+    "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
@@ -93,36 +105,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed Training Data Shape: (4088, 18)\n",
-      "Processed Testing Data Shape: (1022, 18)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_path = 'C:/Users/zen/Documents/-- four/s2/FYP I/XAl-on-healthcare-diagnostics/version_3.0/healthcare-dataset-stroke-data.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
-    "data['bmi'] = data['bmi'].fillna(data['bmi'].mean())\n",
+    "train_data = pd.read_csv('resamp_training_data.csv')\n",
     "\n",
-    "data = data.drop(columns=['id'])\n",
+    "X_train_resampled = train_data.drop(columns=['stroke'])\n",
+    "y_train_resampled = train_data['stroke']\n",
     "\n",
-    "target_column = 'stroke'\n",
-    "\n",
-    "# Separate features and target\n",
-    "X = data.drop(columns=[target_column])\n",
-    "y = data[target_column]\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "categorical_columns = ['gender', 'ever_married', 'work_type', 'Residence_type', 'smoking_status']\n",
-    "numerical_columns = ['age', 'avg_glucose_level', 'bmi']\n",
-    "\n",
-    "X_train_processed, X_test_processed, pipeline = preprocess_data(X_train, X_test, categorical_columns, numerical_columns)"
+    "test_data = pd.read_csv('resamp_test_data.csv')\n",
+    "X_test = test_data.drop(columns=['stroke'])\n",
+    "y_test = test_data['stroke']"
    ]
   },
   {
@@ -134,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4249,9 +4244,9 @@
     "def predict_fn(X):\n",
     "    return log_reg_model.predict_proba(X)[:, 1]\n",
     "\n",
-    "background_kmeans = shap.kmeans(X_train_processed, 50)  # Create 50 clusters\n",
+    "background_kmeans = shap.kmeans(X_train_resampled, 50)  # Create 50 clusters\n",
     "explainer_log = shap.KernelExplainer(predict_fn, background_kmeans)\n",
-    "shap_values_log = explainer_log.shap_values(X_test_processed)\n",
+    "shap_values_log = explainer_log.shap_values(X_test)\n",
     "\n",
     "processed_feature_names = [\n",
     "    'age', 'avg_glucose_level', 'bmi', 'gender_Female', 'gender_Male', \n",
@@ -4264,7 +4259,7 @@
     "\n",
     "feature_names = processed_feature_names\n",
     "\n",
-    "shap.summary_plot(shap_values_log, X_test_processed, feature_names=feature_names)"
+    "shap.summary_plot(shap_values_log, X_test, feature_names=feature_names)"
    ]
   },
   {
