--- a/version_3.0/sci-xai/data_preprocess.ipynb
+++ b/version_3.0/sci-xai/data_preprocess.ipynb
@@ -9,8 +9,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from imblearn.over_sampling import SMOTE"
    ]
@@ -86,149 +84,70 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed Training Data Shape: (4087, 19)\n",
-      "Processed Testing Data Shape: (1022, 19)\n",
-      "Before Resampling: 187 positive out of 4087 samples (4.58%)\n",
-      "After SMOTEENN Resampling: 3900 positive out of 7800 samples (50.0%)\n",
-      "Original Class Distribution:\n",
-      "stroke\n",
-      "0    3900\n",
-      "1     187\n",
-      "Name: count, dtype: int64\n",
-      "Resampled Class Distribution:\n",
-      "stroke\n",
-      "0    3900\n",
-      "1    3900\n",
-      "Name: count, dtype: int64\n",
-      "Resampled Training Data Shape: (7800, 19)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data['bmi'] = data['bmi'].fillna(data['bmi'].mean())\n",
-    "\n",
-    "# BMI into categorical values\n",
-    "def categorize_bmi(row):\n",
-    "    bmi = row['bmi']\n",
-    "    age = row['age']\n",
-    "    \n",
-    "    if pd.isnull(bmi):\n",
-    "        return 'Unknown'\n",
-    "    if age < 20:\n",
-    "        return 'Child'\n",
-    "    elif bmi <= 18.5:\n",
-    "        return 'Underweight'\n",
-    "    elif 18.5 < bmi <= 25:\n",
-    "        return 'Normal weight'\n",
-    "    elif 25 < bmi <= 30:\n",
-    "        return 'Overweight'\n",
-    "    elif bmi > 30:\n",
-    "        return 'Obese'\n",
-    "    else:\n",
-    "        return 'unknown'\n",
-    "\n",
-    "data['bmi_category'] = data.apply(categorize_bmi, axis=1)\n",
-    "\n",
-    "# Drop original numerical bmi column\n",
-    "data.drop(columns=['bmi'], inplace=True)\n",
-    "\n",
-    "# Remove rare gender outlier\n",
-    "data.drop(data[data['gender'] == 'Other'].index[0], inplace=True)\n",
+    "# === CLEANING ===\n",
     "\n",
     "# Drop unnecessary ID column\n",
     "data.drop(columns=['id'], inplace=True)\n",
     "\n",
+    "# Remove rare gender outlier\n",
+    "data = data[data['gender'] != 'Other']\n",
+    "\n",
+    "# Fill missing BMI with mean (you could also bin it, but keeping numeric for now)\n",
+    "data['bmi'] = data['bmi'].fillna(data['bmi'].mean())\n",
+    "\n",
+    "# Handle smoking status for children\n",
     "data.loc[(data['smoking_status'] == 'Unknown') & (data['age'] <= 12), 'smoking_status'] = 'never smoked'\n",
     "\n",
-    "# === Map binary variables ===\n",
+    "# === SIMPLIFYING CATEGORICALS ===\n",
+    "\n",
+    "# Binary mappings (keep these — they're interpretable)\n",
     "data['gender'] = data['gender'].map({'Male': 1, 'Female': 0})\n",
     "data['ever_married'] = data['ever_married'].map({'Yes': 1, 'No': 0})\n",
     "data['Residence_type'] = data['Residence_type'].map({'Urban': 1, 'Rural': 0})\n",
     "\n",
-    "# === Normalize category strings ===\n",
-    "data['work_type'] = data['work_type'].map({\n",
+    "# Normalize and simplify category values (still readable)\n",
+    "data['work_type'] = data['work_type'].replace({\n",
     "    'Private': 'private',\n",
     "    'Self-employed': 'self_employed',\n",
     "    'Govt_job': 'govt_job',\n",
     "    'Never_worked': 'never_worked',\n",
     "    'children': 'children'\n",
     "})\n",
-    "data['smoking_status'] = data['smoking_status'].map({\n",
+    "\n",
+    "data['smoking_status'] = data['smoking_status'].replace({\n",
     "    'formerly smoked': 'formerly_smoked',\n",
     "    'never smoked': 'never_smoked',\n",
     "    'Unknown': 'unknown'\n",
     "})\n",
-    "# (bmi_category already cleaned above)\n",
+    "\n",
+    "# Optional: Convert work_type & smoking_status to category dtype (helpful for EBM)\n",
+    "data['work_type'] = data['work_type'].astype('category')\n",
+    "data['smoking_status'] = data['smoking_status'].astype('category')\n",
+    "\n",
+    "# === BIN BMI IF YOU WANT HUMAN-FRIENDLY OUTPUT (OPTIONAL) ===\n",
+    "def categorize_bmi(bmi):\n",
+    "    if bmi <= 18.5:\n",
+    "        return 'Underweight'\n",
+    "    elif 18.5 < bmi <= 25:\n",
+    "        return 'Normal'\n",
+    "    elif 25 < bmi <= 30:\n",
+    "        return 'Overweight'\n",
+    "    else:\n",
+    "        return 'Obese'\n",
+    "\n",
+    "data['bmi_category'] = data['bmi'].apply(categorize_bmi)\n",
+    "data.drop(columns=['bmi'], inplace=True)\n",
+    "data['bmi_category'] = data['bmi_category'].astype('category')\n",
     "\n",
     "# === Define features and target ===\n",
     "target_column = 'stroke'\n",
     "X = data.drop(columns=[target_column])\n",
     "y = data[target_column]\n",
     "\n",
-    "# === Define column types ===\n",
-    "categorical_columns = ['work_type', 'smoking_status', 'bmi_category']\n",
-    "numerical_columns = ['age', 'avg_glucose_level', 'gender', 'ever_married', 'Residence_type']\n",
-    "\n",
-    "def preprocess_data(X_train, X_test, categorical_columns, numerical_columns):\n",
-    "    \"\"\"\n",
-    "    Apply preprocessing pipeline to the training and testing data.\n",
-    "\n",
-    "    Args:\n",
-    "    - X_train: The training feature data.\n",
-    "    - X_test: The testing feature data.\n",
-    "    - categorical_columns: List of categorical columns to be one-hot encoded.\n",
-    "    - numerical_columns: List of numerical columns to be scaled.\n",
-    "\n",
-    "    Returns:\n",
-    "    - X_train_processed: Preprocessed training data.\n",
-    "    - X_test_processed: Preprocessed testing data.\n",
-    "    \"\"\"\n",
-    "    # Set up a column transformer for preprocessing\n",
-    "    preprocessor = ColumnTransformer(\n",
-    "        transformers=[\n",
-    "            ('num', StandardScaler(), numerical_columns),  # Scale numerical columns\n",
-    "            ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_columns)  # Encode categorical columns\n",
-    "        ]\n",
-    "    )\n",
-    "    \n",
-    "\n",
-    "    pipeline = Pipeline(steps=[('preprocessor', preprocessor)])\n",
-    "\n",
-    "    X_train_processed = pipeline.fit_transform(X_train)\n",
-    "    X_test_processed = pipeline.transform(X_test)\n",
-    "\n",
-    "    print(f\"Processed Training Data Shape: {X_train_processed.shape}\")\n",
-    "    print(f\"Processed Testing Data Shape: {X_test_processed.shape}\")\n",
-    "    \n",
-    "    return X_train_processed, X_test_processed, pipeline\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "X_train_processed, X_test_processed, pipeline = preprocess_data(X_train, X_test, categorical_columns, numerical_columns)\n",
-    "\n",
-    "# === Function to show class balance ===\n",
-    "def show_class_stats(label, y_data):\n",
-    "    pos = y_data.sum()\n",
-    "    total = len(y_data)\n",
-    "    percent = np.round(pos / total * 100, 2)\n",
-    "    print(f\"{label}: {pos} positive out of {total} samples ({percent}%)\")\n",
-    "\n",
-    "show_class_stats(\"Before Resampling\", y_train)\n",
-    "\n",
-    "# === SMOTEENN on processed training data ===\n",
-    "smote = SMOTE(random_state=42)\n",
-    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train_processed, y_train)\n",
-    "\n",
-    "show_class_stats(\"After SMOTEENN Resampling\", y_train_resampled)\n",
-    "\n",
-    "print(f\"Original Class Distribution:\\n{y_train.value_counts()}\")\n",
-    "print(f\"Resampled Class Distribution:\\n{pd.Series(y_train_resampled).value_counts()}\")\n",
-    "print(f\"Resampled Training Data Shape: {X_train_resampled.shape}\")"
+    "# === Train-test split (no scaling, no balancing here) ===\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)"
    ]
   },
   {
@@ -237,20 +156,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_features = pipeline.named_steps['preprocessor'].transformers_[1][1].get_feature_names_out(categorical_columns) # categorical features names\n",
+    "# training set\n",
+    "train_data = X_train.copy()  # Copy features from the train set\n",
+    "train_data['stroke'] = y_train  # Add the target variable to the training set\n",
+    "train_data.to_csv('train_data.csv', index=False)\n",
     "\n",
-    "# Combine with numerical column names (these stay as-is through StandardScaler)\n",
-    "all_features = numerical_columns + list(cat_features)\n",
-    "\n",
-    "# Training set\n",
-    "resampled_data = pd.DataFrame(X_train_resampled, columns=all_features)\n",
-    "resampled_data['stroke'] = y_train_resampled\n",
-    "resampled_data.to_csv('resamp_training_data.csv', index=False)\n",
-    "\n",
-    "# Test set\n",
-    "X_test_df = pd.DataFrame(X_test_processed, columns=all_features)\n",
-    "X_test_df['stroke'] = y_test.values\n",
-    "X_test_df.to_csv('resamp_test_data.csv', index=False)"
+    "# test set\n",
+    "test_data = X_test.copy()  # Copy features from the test set\n",
+    "test_data['stroke'] = y_test  # Add the target variable to the test set\n",
+    "test_data.to_csv('test_data.csv', index=False)"
    ]
   }
  ],
