--- a/version_3.0/sci-xai/data_preprocess.ipynb
+++ b/version_3.0/sci-xai/data_preprocess.ipynb
@@ -152,18 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# training set\n",
     "train_data = X_train.copy()  # Copy features from the train set\n",
-    "train_data['stroke'] = y_train  # Add the target variable to the training set\n",
+    "train_data['stroke'] = y_train  # target variable to the training set\n",
     "train_data.to_csv('train_data.csv', index=False)\n",
     "\n",
     "# test set\n",
     "test_data = X_test.copy()  # Copy features from the test set\n",
-    "test_data['stroke'] = y_test  # Add the target variable to the test set\n",
+    "test_data['stroke'] = y_test  # target variable to the test set\n",
     "test_data.to_csv('test_data.csv', index=False)"
    ]
   }
