--- a/version_3.0/sci-xai/whitebox.ipynb
+++ b/version_3.0/sci-xai/whitebox.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a7b875cb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'xai (Python 3.12.4)' requires the ipykernel package.\n",
-      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '\"c:/Users/zen/Documents/-- four/s2/FYP I/XAl-on-healthcare-diagnostics/xai/Scripts/python.exe\" -m pip install ipykernel -U --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from interpret.glassbox import ExplainableBoostingClassifier\n",
     "from interpret import show\n",
@@ -83,7 +72,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xai",
+   "display_name": "xai-l6aICPR9-py3.13",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
