--- a/version_3.0/sci-xai/whitebox.ipynb
+++ b/version_3.0/sci-xai/whitebox.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c22b0c04",
    "metadata": {},
    "outputs": [],
@@ -38,19 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "645b3d07",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'xai (Python 3.12.4)' requires the ipykernel package.\n",
-      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '\"c:/Users/zen/Documents/-- four/s2/FYP I/XAl-on-healthcare-diagnostics/xai/Scripts/python.exe\" -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<!-- http://127.0.0.1:7001/2510501680464/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/2510501680464/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<!-- http://127.0.0.1:7001/2510534277904/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/2510534277904/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
