replaying stuff for imgs

--- a/version_3.0/sci-xai/whitebox.ipynb
+++ b/version_3.0/sci-xai/whitebox.ipynb
@@ -45,8 +45,8 @@
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/2510501680464/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/2510501680464/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/2682328147888/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/2682328147888/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -55,8 +55,8 @@
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/2510534277904/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/2510534277904/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/2682361370000/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/2682361370000/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -82,7 +82,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xai-l6aICPR9-py3.13",
+   "display_name": "xai-9s0IpLRD-py3.13",
    "language": "python",
    "name": "python3"
   },
