--- a/version_3.0/sci-xai/data_preprocess.ipynb
+++ b/version_3.0/sci-xai/data_preprocess.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "file_path = 'C:/Users/zen/Documents/-- four/s2/FYP I/XAl-on-healthcare-diagnostics/version_3.0/healthcare-dataset-stroke-data.csv'\n",
+    "file_path = 'C:/Users/zen/Documents/Research Publications/XAl-on-healthcare-diagnostics/version_3.0/healthcare-dataset-stroke-data.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "print(data.info())\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xai",
+   "display_name": "xai-9s0IpLRD-py3.13",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
